--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>Welcome to the Hospital</h1>
-    <form action="/ingresos" method="POST">
+    <!-- <form action="/ingresos" method="POST">
         <input type="text" placeholder="Nombre" name="name">
         <input type="text" placeholder="Apellidos" name="quote">
         <input type="text" placeholder="Aseguradora" name="quote">
         <button type="submit">Submit</button>
-      </form>
+      </form> -->
 </body>
 </html>
